# jira-ticket-analyzer

./: .env.example  README.md  create_tickets.py  docker-compose.yaml  pyproject.toml
.github/workflows/: code-quality.yml
app/: database.py  graph.py  main.py  nodes.py  state.py
